# questbank

./: AGENT.md  COMO-USAR.md  README.md  app.jsx  exemplo-saida.json  fix_handlers.py  fix_jsx.py  generate_test_db.py  index.html  info.txt  manifest.json  questao-exemplo.json  questbank-backup-2026-04-11.questbank.json  questoes-fisica-atualizadas.json  questoes.tex  questoes_fisica_adaptadas.json  refactor.py  restore.patch  sw.js  test-syntax.html  teste-formatacao.docx  teste_fisica_20.json  testtt.docx
.agents/skills/criar-banco-dados/: SKILL.md
.agents/skills/criar-frontend/: SKILL.md
.agents/skills/exportar-word/: SKILL.md
.agents/skills/importar-questoes/: SKILL.md
.agents/skills/importar-questoes/examples/: sample-discursiva.json  sample-objetiva.json
.agents/skills/setup-projeto/: SKILL.md
components/: bulk-edit-tags-modal.jsx  create-question-modal.jsx  edit-question-modal.jsx  exams-panel.jsx  export-modal.jsx  filter-bar.jsx  import-modal.jsx  question-card.jsx  question-list.jsx  rich-text-toolbar.jsx  selected-panel.jsx  stats-panel.jsx  subject-tree.jsx  visual-editor.jsx
db/: schema.js  taxonomy.js
questbank-server/: README.md  exemplo.tex  pyproject.toml
questbank-server/latex2questbank/: __init__.py  __main__.py  cli.py  parser.py  server.py
questbank-server/latex2questbank.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
saida/: questoes-fisica-teste.json  sample-data.json
utils/: export-engines.js  export-handler.js  html-sanitizer.js  import-handler.js  latex-to-docx-math.js
